--- a/Code/css/style_home.css
+++ b/Code/css/style_home.css
@@ -100,10 +100,11 @@ header{
 	position: absolute;
 }
 #section_actualite{
-	margin-top:100px;
+	margin-top:54px;
 	margin-left:130px;
 	height: 480px;
 	width: 940px;
+	border-bottom: solid 2px silver;
 }
 #top_actualite{
 	width: 940px;
@@ -117,27 +118,31 @@ header{
 	height: 30px;
 	float: left;
 }
+#article_content{
+	margin-top: 40px;
+}
 #filtre_actualite{
 	float: right;
 	height: 30px;
 	margin-top: 15px;
 }
 #filtre_actualite a{
-		text-decoration:none;
-		color:black;
+	text-decoration:none;
+	color:black;
 }
 #filtre_actualite span{
 	font-family: 'Open Sans', serif;
 	padding-left:20px;
 }
+#section_actualite{
+	position: relative;
+}
 #section_actualite article{
 	float:left;
 	width: 460px;
 	height: 133px;
-	position: relative;
 	margin-bottom: 38px;
 }
-
 #section_actualite article img{
 	float: left;
 	height: 133px;
@@ -159,13 +164,131 @@ header{
 	height: 50px;
 	width: 300px;
 	font-family: 'Open Sans', serif;
-	font-size: 0.7em;
+	font-size: 1em;
 	margin-bottom:15px;
 }
 #section_actualite article div span{
-	position: absolute;
-	bottom: 23px;
-	left:0px;
 	color: blue;
+	width: 90px;
+	height: 20px;
+	margin-top: 20px;
+	display: block;
+	font-family: 'Open Sans', serif;
+	font-size: 0.9em;
+}
+#bottom_span{
+	position: absolute;
+	bottom: -5px;
+	right:50%;
+	width: 180px;
+	height: 20px;
+	background-color: #f6f6f6;
+	font-size: 0.9em;
+	font-weight: bold;
+	font-family: 'Open Sans', serif;
+	text-align : center;
+	margin: auto;
+}
+#section_image{
+	height:328px;
+	width:1200px;
+	margin-top:90px;
+}
+#section_musicien{
+	position: relative;
+	margin-top:54px;
+	margin-left:130px;
+	height: 480px;
+	width: 940px;
+	border-bottom: solid 2px silver;
+}
+#top_musicien{
+	width: 940px;
+	height: 80px;
+	border-bottom: solid 2px silver;
+}
+#top_musicien h1{
+	font-family: 'Quattrocento', serif;
+	font-size: 2.4em;
+	width: 180px;
+	height: 30px;
+	float: left;
+}
+.article_musicien{
+	height:190px;
+	width:220px;
+	position: relative;
+	float: left;
+	margin-right: 20px;
+}
+#article_musicien_last{
+	height:190px;
+	width:220px;
+	position: relative;
+	float: left;
 }
 
+#article_musicien_last img{
+	position: absolute;
+	height:190px;
+	width:220px;
+	top: 0;
+}
+#article_musicien_last div{
+	height:110px;
+	width:220px;
+	position: absolute;
+	background-color: white;
+	bottom: 0;
+	border-top: solid 5px violet;
+}
+#article_musicien_last div p{
+	margin-top:36px;
+	height:38px;
+	width:220px;
+	text-align: center;
+	font-family: 'Quattrocento', serif;
+	font-size: 1.2em;
+}
+#article_musicien_last div p>span{
+	margin-top:36px;
+	height:38px;
+	width:220px;
+	text-align: center;
+	font-family: 'Quattrocento', serif;
+	font-size: 0.9em;
+}
+.article_musicien img{
+	position: absolute;
+	height:190px;
+	width:220px;
+	top: 0;
+}
+.article_musicien div{
+	height:110px;
+	width:220px;
+	position: absolute;
+	background-color: white;
+	bottom: 0;
+	border-top: solid 5px blue;
+}
+.article_musicien div p{
+	margin-top:36px;
+	height:38px;
+	width:220px;
+	text-align: center;
+	font-family: 'Quattrocento', serif;
+	font-size: 1.2em;
+}
+.article_musicien div p>span{
+	margin-top:36px;
+	height:38px;
+	width:220px;
+	text-align: center;
+	font-family: 'Quattrocento', serif;
+	font-size: 0.9em;
+}
+
+#content_article_music{
+	margin-top:60px;
+}
